19654
```scala
lucmac:sandbox luc$ cat A.java 
public class A { }
lucmac:sandbox luc$ cat A.scala 
class A
lucmac:sandbox luc$ scalac -Xresident

nsc> A.java

nsc> A.scala
A.scala:1: error: Companions 'class A' and 'object A' must be defined in same file:
  Found in /Users/luc/scala/scala/sandbox/A.scala and /Users/luc/scala/scala/sandbox/A.java
class A
      ^
```
